@@ -1,71 +1,0 @@
-GCEdit 0.4.2-next.
-
-A GameCube disk editor.
-
-http://ikn.org.uk/app/gcedit
-
-    LICENSE
-
-Licensed under the GNU General Public License, version 3; if this was not
-included, you can find it here:
-    http://www.gnu.org/licenses/gpl-3.0.txt
-
-    DEPENDENCIES
-
-Python 3 (>= 3.2): http://www.python.org
-PyGObject 3: https://live.gnome.org/PyGObject
-
-    INSTALLATION
-
-There is no installation method on Windows.  On Unix-like OSs, with bash, sed,
-find, GNU make or equivalent and gettext, run
-
-    ./configure
-    make
-    make install
-
-The makefile respects the prefix, DESTDIR, etc. arguments.  Of course,
-`make install' needs to be run as root if installing outside of your home
-directory.  To uninstall, run
-
-    make uninstall
-
-`make clean' and `make distclean' are also supported, and work as expected.
-
-    USAGE
-
-On Windows, in the source directory, run
-
-    python run_gcedit
-
-where python is the Python 3 interpreter.
-
-On Unix-like OSs, once installed, just run gcedit (installed to /usr/local/bin/
-by default).  Alternatively, you can run in-place without installing by
-
-    ./configure
-    make inplace
-    ./run_gcedit
-
-(`make inplace' performs a subset of the actions that `make' does.)
-
-    FILES
-
-GCEdit creates some files during operation.  On Unix-like OSs:
-
-~/
-    .config/gcedit/
-        conf: configuration
-        accels: saved keyboard shortcuts
-    .local/share/gcedit/
-        disk_history: recently opened disks
-        search_history: saved searches
-
-On Windows:
-
-%APPDATA%/
-    gcedit/
-        conf: configuration
-        accels: saved keyboard shortcuts
-        disk_history: recently opened disks
-        search_history: saved searches
