@@ -1,33 +1,28 @@
-# FIXME: $(INSTALL) doesn't work (apparently blank)
-INSTALL_PROGRAM := install
-INSTALL_DATA := install -m 644
-
+project_name := gcedit
 prefix := /usr/local
 datarootdir := $(prefix)/share
 exec_prefix := $(prefix)
 bindir := $(exec_prefix)/bin
-docdir := $(datarootdir)/doc/gcedit
-python_lib := $(shell ./get_python_lib $(DESTDIR)$(prefix))
+docdir := $(datarootdir)/doc/$(project_name)
 
-ICONS := $(wildcard icons/hicolor/*/apps/gcedit.png)
-ICON_PATTERN := icons/hicolor/%/apps/gcedit.png
+ICONS := $(wildcard icons/hicolor/*/apps/*.png)
+ICON_PATTERN := icons/hicolor/%/apps/%.png
 ICON_PATH = $(patsubst install-%.png,$(ICON_PATTERN),$@)
 ICON_PATH_UNINSTALL = $(patsubst uninstall-%.png,$(ICON_PATTERN),$@)
 
-.PHONY: all clean distclean install uninstall
+INSTALL_PROGRAM := install
+INSTALL_DATA := install -m 644
 
-inplace:
+.PHONY: all clean install uninstall
+
+all:
 	./i18n/gen_mo
-
-all: inplace
-	./setup build
+	python3 setup.py bdist
 
 clean:
-	$(RM) -r build
-	$(RM) -r gcedit/locale
-
-distclean: clean
-	@ ./unconfigure
+	find "$(project_name)" -type d -name '__pycache__' | xargs $(RM) -r
+	$(RM) -r build/ dist/ "$(project_name).egg-info/"
+	$(RM) -r "$(project_name)/locale/"
 
 install-%.png:
 	mkdir -p $(shell dirname $(DESTDIR)$(datarootdir)/$(ICON_PATH))
@@ -38,26 +33,23 @@ uninstall-%.png:
 
 install: $(patsubst $(ICON_PATTERN),install-%.png,$(ICONS))
 	@ # executable
-	./set_prefix "$(prefix)"
 	mkdir -p "$(DESTDIR)$(bindir)/"
-	$(INSTALL_PROGRAM) .run_gcedit.tmp "$(DESTDIR)$(bindir)/gcedit"
-	$(RM) .run_gcedit.tmp
+	$(INSTALL_PROGRAM) "run_$(project_name)" "$(DESTDIR)$(bindir)/$(project_name)"
 	@ # package
-	./setup install --prefix="$(DESTDIR)$(prefix)"
+	python3 setup.py install --root="$(or $(DESTDIR),/)" --prefix="$(prefix)"
 	@ # readme
 	mkdir -p "$(DESTDIR)$(docdir)/"
-	$(INSTALL_DATA) README "$(DESTDIR)$(docdir)/"
+	$(INSTALL_DATA) README.md "$(DESTDIR)$(docdir)/"
 	@ # desktop file
 	mkdir -p "$(DESTDIR)$(datarootdir)/applications"
-	$(INSTALL_DATA) gcedit.desktop "$(DESTDIR)$(datarootdir)/applications"
+	$(INSTALL_DATA) "$(project_name).desktop" "$(DESTDIR)$(datarootdir)/applications"
 
 uninstall: $(patsubst $(ICON_PATTERN),uninstall-%.png,$(ICONS))
 	@ # executable
-	$(RM) "$(DESTDIR)$(bindir)/gcedit"
+	$(RM) "$(DESTDIR)$(bindir)/$(project_name)"
 	@ # package
-	- ./setup remove --prefix="$(DESTDIR)$(prefix)" &> /dev/null || \
-	$(RM) -r $(python_lib)/{gcedit,gcedit-*.egg-info}
+	./uninstall "$(DESTDIR)" "$(prefix)"
 	@ # readme
 	$(RM) -r "$(DESTDIR)$(docdir)/"
 	@ # desktop file
-	$(RM) "$(DESTDIR)$(datarootdir)/applications/gcedit.desktop"
+	$(RM) "$(DESTDIR)$(datarootdir)/applications/$(project_name).desktop"
