@@ -1,4 +1,5 @@
 0.4.2-next:
+ * update build setup to avoid packaging issues
  * Russian translation
  * bug: may write invalid disks when increasing the size
 
